src/retrieveCodeoutput/unpackaged/objects/Adaptive_Exam__c.object
<CustomObject>
    <fields>
        <fullName>Attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attempts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Difficulty__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This is the average of the difficulty level of the child exam instances.  Since these have a lookup relationship, this number has to be updated by a trigger</description>
        <label>Current Difficulty</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The base adaptive exam</inlineHelpText>
        <label>Adaptive Base Exam Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Exam__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Adaptive Exam</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Exam__c</referenceTo>
        <relationshipLabel>Adaptive Exams</relationshipLabel>
        <relationshipName>Adaptive_Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Min_Attempts__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Minimum number of attempts before generating another test</description>
        <label>Min Attempts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_questions__c</fullName>
        <defaultValue>10</defaultValue>
        <label>Number of questions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Fail_Threshold__c</fullName>
        <defaultValue>0.25</defaultValue>
        <label>Question Fail Threshold</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Pass_Threshold__c</fullName>
        <defaultValue>0.85</defaultValue>
        <description>The average score must exceed this threshold for going to the next level</description>
        <label>Question Pass Threshold</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Difficulty__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Target Difficulty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Taker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Taker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Adaptive Exams</relationshipLabel>
        <relationshipName>Adaptive_Exams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>DateTime</type>
    </fields>
    <label>Adaptive Exam</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Exam__c</columns>
        <columns>Name__c</columns>
        <columns>Test_Taker__c</columns>
        <columns>Number_of_questions__c</columns>
        <columns>Min_Attempts__c</columns>
        <columns>Attempts__c</columns>
        <columns>Criteria__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AE-{000000}</displayFormat>
        <label>Adaptive Exam Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adaptive Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>